--- a/src/main/html/five-in-a-row-triangle.html
+++ b/src/main/html/five-in-a-row-triangle.html
@@ -14,7 +14,6 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row-triangle.html
 	</body>
 
 	<script src='eval-script.js'></script>
-	<script src='five-in-a-row.js'></script>
 	<script src='frp.js'></script>
 	<script src='pq.js'></script>
 
@@ -26,6 +25,7 @@ Promise.resolve(true)
 // .then(({ lens, range, read, }) => {
 .then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/render.js', 'render()'))
 // .then(({ rd, renderAgain, }) => {
+.then(() => loadsrcscript('five-in-a-row.js'))
 .then(() => {
 let view = rd.parse(`
     <span style='display: flex; flex-direction:column; font-size: 36px;'>
