--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -108,71 +108,69 @@ Promise.resolve(true)
 })
 .then(() => loadsrcscript('five-in-a-row.js'))
 .then(() => {
-let viewCell = rd.parse(`
-	<div class='hex' style='filter___: { vm.selected ? "brightness(80%)" : "brightness(100%)" };' rd_on_click='handleclick(vm, ev)'>
-		<div class='part' style='border-bottom: 15px solid { vm.selected ? palette[2] : "#DDDDDD" };'></div>
-		<div class='middle' style='background: { vm.selected ? palette[2] : "#DDDDDD" }'>
-			<span draggable='true' style='left: 50%; position: absolute; top: 50%; transform: translate(-50%, -50%);'>
-				<rd_map v='vm.d'>
-					<rd_if v='vm != null'>{ icons[vm] }</rd_if>
-				</rd_map>
-			</span>
+	let viewCell = rd.parse(`
+		<div class='hex' style='filter___: { vm.selected ? "brightness(80%)" : "brightness(100%)" };' rd_on_click='handleclick(vm, ev)'>
+			<div class='part' style='border-bottom: 15px solid { vm.selected ? palette[2] : "#DDDDDD" };'></div>
+			<div class='middle' style='background: { vm.selected ? palette[2] : "#DDDDDD" }'>
+				<span draggable='true' style='left: 50%; position: absolute; top: 50%; transform: translate(-50%, -50%);'>
+					<rd_map v='vm.d'>
+						<rd_if v='vm != null'>{ icons[vm] }</rd_if>
+					</rd_map>
+				</span>
+			</div>
+			<div class='part' style='border-top: 15px solid { vm.selected ? palette[2] : "#DDDDDD" };'></div>
 		</div>
-		<div class='part' style='border-top: 15px solid { vm.selected ? palette[2] : "#DDDDDD" };'></div>
-	</div>
-`, {});
+	`, {});
 
-let viewCells = rd.parse(`
-	<div class='hex-row' style='margin-left: { vm[0].x * 26.5 + vm[0].y * 53 }px'>
-		<rd_for>
-			<rd_component v='views.viewCell' />
-		</rd_for>
-	</div>
-`, { viewCell, });
-
-globalThis.view = rd.parse(`
-	<span style='display: flex; flex-direction: column;'>
-		<span style='align-items: center; display: flex; justify-content: space-between;'>
-			<span>
-				<rd_map v='vm.nextstones'>
-					<rd_component v='views.viewCells' />
-				</rd_map>
-			</span>
-			<span style='color: { palette[4] }; font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
-		</span>
-		<span>
-			<img height='64' />
-		</span>
-		<rd_map v='vm.board'>
+	let viewCells = rd.parse(`
+		<div class='hex-row' style='margin-left: { vm[0].x * 26.5 + vm[0].y * 53 }px'>
 			<rd_for>
-				<rd_map v='vm.indices.map(i => vm[i])'>
-					<rd_component v='views.viewCells' />
-				</rd_map>
+				<rd_component v='views.viewCell' />
 			</rd_for>
-		</rd_map>
-		<!-- button rd_on_click='handleclose()'>close</button -->
-		<rd_map v='vm.notification'>
-			<rd_if v='vm'>
-				<div style='
-					background: { palette[vm.c] };
-					bottom: 0;
-					font-family: Oswald, monospace;
-					left: 0;
-					position: fixed;
-					text-align: center;
-					width: 100%;'>
-					<p>{ vm.message }</p>
-				</div>
-			</rd_if>
-		</rd_map>
-	</span>
-`, { viewCells, });
+		</div>
+	`, { viewCell, });
 
-let { handlers, vw, } = fiveinarow(renderAgain, view);
-globalThis.handleclick = handlers.handleclick;
-globalThis.handleclose = handlers.handleclose;
+	globalThis.view = rd.parse(`
+		<span style='display: flex; flex-direction: column;'>
+			<span style='align-items: center; display: flex; justify-content: space-between;'>
+				<span>
+					<rd_map v='vm.nextstones'>
+						<rd_component v='views.viewCells' />
+					</rd_map>
+				</span>
+				<span style='color: { palette[4] }; font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
+			</span>
+			<span>
+				<img height='64' />
+			</span>
+			<rd_map v='vm.board'>
+				<rd_for>
+					<rd_map v='vm.indices.map(i => vm[i])'>
+						<rd_component v='views.viewCells' />
+					</rd_map>
+				</rd_for>
+			</rd_map>
+			<!-- button rd_on_click='handleclose()'>close</button -->
+			<rd_map v='vm.notification'>
+				<rd_if v='vm'>
+					<div style='
+						background: { palette[vm.c] };
+						bottom: 0;
+						font-family: Oswald, monospace;
+						left: 0;
+						position: fixed;
+						text-align: center;
+						width: 100%;'>
+						<p>{ vm.message }</p>
+					</div>
+				</rd_if>
+			</rd_map>
+		</span>
+	`, { viewCells, });
 
-vw.init();
+	for (let [k, v] of Object.entries(fiveinarow(renderAgain, view))) globalThis[k] = v;
+
+	vw.init();
 });
 	</script>
 </html>
