--- a/src/main/html/ball.html
+++ b/src/main/html/ball.html
@@ -15,9 +15,9 @@
 'use strict';
 
 Promise.resolve(true)
-.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/fun.js', 'fun()'))
+.then(() => evalscriptglobal('fun.js', 'fun()'))
 // .then(({ lens, range, read, }) => {
-.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/render.js', 'render()'))
+.then(() => evalscriptglobal('render.js', 'render()'))
 // .then(({ rd, renderAgain, }) => {
 .then(() => {
 	let width = window.innerWidth;
