--- a/src/main/html/block-fill.html
+++ b/src/main/html/block-fill.html
@@ -15,9 +15,9 @@ file:///home/ywsing/suite/src/main/html/block-fill.html
 'use strict';
 
 Promise.resolve(true)
-.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/fun.js', 'fun()'))
+.then(() => evalscriptglobal('fun.js', 'fun()'))
 // .then(({ lens, range, read, }) => {
-.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/render.js', 'render()'))
+.then(() => evalscriptglobal('render.js', 'render()'))
 // .then(({ rd, renderAgain, }) => {
 .then(() => {
 	let vmsetcell = (vmt0, vmc1) =>  {
