--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -73,9 +73,9 @@ let cc = ((sizex, sizey) => {
 })(size, size);
 
 Promise.resolve(true)
-.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/fun.js', 'fun()'))
+.then(() => evalscriptglobal('fun.js', 'fun()'))
 // .then(({ lens, range, read, }) => {
-.then(() => evalscriptglobal('https://raw.githubusercontent.com/stupidsing/suite/master/src/main/html/render.js', 'render()'))
+.then(() => evalscriptglobal('render.js', 'render()'))
 // .then(({ rd, renderAgain, }) => {
 .then(() => loadsrcscript('five-in-a-row.js'))
 .then(() => {
