--- a/src/main/html/ball.html
+++ b/src/main/html/ball.html
@@ -15,7 +15,7 @@
 
 Promise.resolve(true)
 .then(() => evalscriptglobal('fun.js', 'fun()'))
-// .then(({ lens, range, read, }) => {
+// .then(({ lens, rand, range, read, }) => {
 .then(() => evalscriptglobal('render.js', 'render()'))
 // .then(({ rd, renderAgain, }) => {
 .then(() => {
