--- a/src/main/html/block-fill.html
+++ b/src/main/html/block-fill.html
@@ -16,7 +16,7 @@ file:///home/ywsing/suite/src/main/html/block-fill.html
 
 Promise.resolve(true)
 .then(() => evalscriptglobal('fun.js', 'fun()'))
-// .then(({ lens, range, read, }) => {
+// .then(({ lens, rand, range, read, }) => {
 .then(() => evalscriptglobal('render.js', 'render()'))
 // .then(({ rd, renderAgain, }) => {
 .then(() => {
