--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -74,11 +74,12 @@ let cc = ((sizex, sizey) => {
 
 Promise.resolve(true)
 .then(() => evalscriptglobal('fun.js', 'fun()'))
-// .then(({ lens, range, read, }) => {
+// .then(({ lens, rand, range, read, }) => {
 .then(() => evalscriptglobal('render.js', 'render()'))
 // .then(({ rd, renderAgain, }) => {
-.then(() => loadsrcscript('five-in-a-row.js'))
-.then(() => {
+.then(() => evalscript('five-in-a-row.js', 'fiveinarow'))
+// .then(() => loadsrcscript('five-in-a-row.js'))
+.then(fiveinarow => {
 	let viewCell = rd.parse(`
 		<span draggable='true'
 			style='
