--- a/src/main/html/five-in-a-row-triangle.html
+++ b/src/main/html/five-in-a-row-triangle.html
@@ -22,108 +22,111 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row-triangle.html
 
 Promise.resolve(true)
 .then(() => evalscriptglobal('fun.js', 'fun()'))
-// .then(({ lens, range, read, }) => {
+// .then(({ lens, rand, range, read, }) => {
 .then(() => evalscriptglobal('render.js', 'render()'))
 // .then(({ rd, renderAgain, }) => {
-.then(() => loadsrcscript('five-in-a-row.js'))
-.then(() => {
-let view = rd.parse(`
-    <span style='display: flex; flex-direction:column; font-size: 36px;'>
-        <rd_map v='vm.board'>
-            <rd_for v='vm.indices.map(i => ({ l: vm[i], r: vm[i + 1], }))'>
-                <rd_map v='vm.l'>
-                    <span style='display: flex; font-family: monospace; margin-bottom: 5px;'>
-                        <rd_for v='vm.indices.map(i => ({ l: vm[i], r: vm[i + 1], }))'>
-                            <rd_map v='vm.l'>
-                                <span style='
-                                    border-bottom: 100px solid #DDDDDD;
-                                    border-left: 50px solid transparent;
-                                    border-right: 50px solid transparent;
-                                    display: flex;
-                                    height: 0;
-                                    justify-content: center;
-                                    left: 0px;
-                                    width: 0;'>
-                                    <span style='height: 50px; transform: translate(0, 100%);'>
-                                        <span style='align-items: flex-start; display: flex; height: 0;'>{ icons[vm.d] }</span>
+.then(() => evalscript('five-in-a-row.js', 'fiveinarow'))
+// .then(() => loadsrcscript('five-in-a-row.js'))
+.then(fiveinarow => {
+    let view = rd.parse(`
+        <span style='display: flex; flex-direction:column; font-size: 36px;'>
+            <rd_map v='vm.board'>
+                <rd_for v='vm.indices.map(i => ({ l: vm[i], r: vm[i + 1], }))'>
+                    <rd_map v='vm.l'>
+                        <span style='display: flex; font-family: monospace; margin-bottom: 5px;'>
+                            <rd_for v='vm.indices.map(i => ({ l: vm[i], r: vm[i + 1], }))'>
+                                <rd_map v='vm.l'>
+                                    <span style='
+                                        border-bottom: 100px solid #DDDDDD;
+                                        border-left: 50px solid transparent;
+                                        border-right: 50px solid transparent;
+                                        display: flex;
+                                        height: 0;
+                                        justify-content: center;
+                                        left: 0px;
+                                        width: 0;'>
+                                        <span style='height: 50px; transform: translate(0, 100%);'>
+                                            <span style='align-items: flex-start; display: flex; height: 0;'>{ icons[vm.d] }</span>
+                                        </span>
                                     </span>
-                                </span>
-                            </rd_map>
-                            <rd_map v='vm.r'>
-                                <span style='
-                                    border-left: 50px solid transparent;
-                                    border-right: 50px solid transparent;
-                                    border-top: 100px solid #DDDDDD;
-                                    display: flex;
-                                    height: 0;
-                                    justify-content: center;
-                                    left: -45px;
-                                    margin-right: -90px;
-                                    position: relative;
-                                    width: 0;'>
-                                    <span style='height: 50px; transform: translate(0, -100%);'>
-                                        <span style='align-items: flex-end; display: flex; height: 0;'>{ icons[vm.d] }</span>
+                                </rd_map>
+                                <rd_map v='vm.r'>
+                                    <span style='
+                                        border-left: 50px solid transparent;
+                                        border-right: 50px solid transparent;
+                                        border-top: 100px solid #DDDDDD;
+                                        display: flex;
+                                        height: 0;
+                                        justify-content: center;
+                                        left: -45px;
+                                        margin-right: -90px;
+                                        position: relative;
+                                        width: 0;'>
+                                        <span style='height: 50px; transform: translate(0, -100%);'>
+                                            <span style='align-items: flex-end; display: flex; height: 0;'>{ icons[vm.d] }</span>
+                                        </span>
                                     </span>
-                                </span>
-                            </rd_map>
-                        </rd_for>
-                    </span>
-                </rd_map>
-                <rd_map v='vm.r'>
-                    <span style='display: flex; font-family: monospace; margin-bottom: 5px;'>
-                        <rd_for v='vm.indices.map(i => ({ l: vm[i], r: vm[i + 1], }))'>
-                            <rd_map v='vm.l'>
-                                <span style='
-                                    border-left: 50px solid transparent;
-                                    border-right: 50px solid transparent;
-                                    border-top: 100px solid #DDDDDD;
-                                    display: flex;
-                                    height: 0;
-                                    justify-content: center;
-                                    left: 0px;
-                                    position: relative;
-                                    width: 0;'>
-                                    <span style='height: 50px; transform: translate(0, -100%);'>
-                                        <span style='align-items: flex-end; display: flex; height: 0;'>{ icons[vm.d] }</span>
+                                </rd_map>
+                            </rd_for>
+                        </span>
+                    </rd_map>
+                    <rd_map v='vm.r'>
+                        <span style='display: flex; font-family: monospace; margin-bottom: 5px;'>
+                            <rd_for v='vm.indices.map(i => ({ l: vm[i], r: vm[i + 1], }))'>
+                                <rd_map v='vm.l'>
+                                    <span style='
+                                        border-left: 50px solid transparent;
+                                        border-right: 50px solid transparent;
+                                        border-top: 100px solid #DDDDDD;
+                                        display: flex;
+                                        height: 0;
+                                        justify-content: center;
+                                        left: 0px;
+                                        position: relative;
+                                        width: 0;'>
+                                        <span style='height: 50px; transform: translate(0, -100%);'>
+                                            <span style='align-items: flex-end; display: flex; height: 0;'>{ icons[vm.d] }</span>
+                                        </span>
                                     </span>
-                                </span>
-                            </rd_map>
-                            <rd_map v='vm.r'>
-                                <span style='
-                                    border-bottom: 100px solid #DDDDDD;
-                                    border-left: 50px solid transparent;
-                                    border-right: 50px solid transparent;
-                                    display: flex;
-                                    height: 0;
-                                    justify-content: center;
-                                    left: -45px;
-                                    margin-right: -90px;
-                                    position: relative;
-                                    width: 0;'>
-                                    <span style='height: 50px; transform: translate(0, 100%);'>
-                                        <span style='align-items: flex-start; display: flex; height: 0;'>{ icons[vm.d] }</span>
+                                </rd_map>
+                                <rd_map v='vm.r'>
+                                    <span style='
+                                        border-bottom: 100px solid #DDDDDD;
+                                        border-left: 50px solid transparent;
+                                        border-right: 50px solid transparent;
+                                        display: flex;
+                                        height: 0;
+                                        justify-content: center;
+                                        left: -45px;
+                                        margin-right: -90px;
+                                        position: relative;
+                                        width: 0;'>
+                                        <span style='height: 50px; transform: translate(0, 100%);'>
+                                            <span style='align-items: flex-start; display: flex; height: 0;'>{ icons[vm.d] }</span>
+                                        </span>
                                     </span>
-                                </span>
-                            </rd_map>
-                        </rd_for>
-                    </span>
-                </rd_map>
-            </rd_for>
-        </rd_map>
-    </span>
-`);
+                                </rd_map>
+                            </rd_for>
+                        </span>
+                    </rd_map>
+                </rd_for>
+            </rd_map>
+        </span>
+    `);
 
-renderAgain(view, vm => ({
-    board: {
-        indices: [0, 2,],
-        ...(range(0, 4).map(x => ({
-            indices: [0, 2, 4, 6,],
-            ...(range(0, 8).map(y => ({
-                d: rand(0, icons.length),
+	for (let [k, v] of Object.entries(fiveinarow(renderAgain, view))) globalThis[k] = v;
+
+    renderAgain(view, vm => ({
+        board: {
+            indices: [0, 2,],
+            ...(range(0, 4).map(x => ({
+                indices: [0, 2, 4, 6,],
+                ...(range(0, 8).map(y => ({
+                    d: rand(0, icons.length),
+                })).list()),
             })).list()),
-        })).list()),
-    },
-}));
+        },
+    }));
 });
 	</script>
 </html>
