--- a/src/main/html/block-fill.html
+++ b/src/main/html/block-fill.html
@@ -16,7 +16,7 @@ file:///home/ywsing/suite/src/main/html/block-fill.html
 
 Promise.resolve(true)
 .then(() => evalscriptglobal('fun.js', 'fun()'))
-.then(() => evalscriptglobal('render.js', 'render()'))
+.then(() => evalscriptglobal('render.js', 'render'))
 .then(() => {
 	let vmsetcell = (vmt0, vmc1) =>  {
 		let vmr0 = vmt0[vmc1.x];
