--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -74,9 +74,9 @@ let cc = ((sizex, sizey) => {
 
 Promise.resolve(true)
 .then(() => evalscriptglobal('fun.js', 'fun()'))
-.then(() => evalscriptglobal('render.js', 'render()'))
+.then(() => evalscriptglobal('render.js', 'render'))
 .then(() => evalscript('five-in-a-row.js', 'fiveinarow'))
-.then(p => {
+.then(fiveinarow => {
 	let viewCell = rd.parse(`
 		<span draggable='true'
 			style='
@@ -140,7 +140,7 @@ Promise.resolve(true)
 		</span>
 	`, { viewCells, });
 
-	return p(cc, view);
+	return fiveinarow(cc, view);
 })
 .then(fiveinarow => {
 	for (let [k, v] of Object.entries(fiveinarow)) globalThis[k] = v;
