--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -97,9 +97,9 @@ let cc = ((sizex, sizey) => {
 Promise.resolve(true)
 .then(() => evalscriptglobal('fun.js', 'fun()'))
 .then(() => evalscriptglobal('pq.js', 'pq()'))
-.then(() => evalscriptglobal('render.js', 'render()'))
+.then(() => evalscriptglobal('render.js', 'render'))
 .then(() => evalscript('five-in-a-row.js', 'fiveinarow'))
-.then(p => {
+.then(fiveinarow => {
 	let viewCell = rd.parse(`
 		<div class='hex' style='filter___: { vm.selected ? "brightness(80%)" : "brightness(100%)" };' rd_on_click='handleclick(vm, ev)'>
 			<div class='part' style='border-bottom: 15px solid { vm.selected ? palette[2] : "#DDDDDD" };'></div>
@@ -160,7 +160,7 @@ Promise.resolve(true)
 		</span>
 	`, { viewCells, });
 
-	return p(cc, view);
+	return fiveinarow(cc, view);
 })
 .then(fiveinarow => {
 	for (let [k, v] of Object.entries(fiveinarow)) globalThis[k] = v;
