--- a/src/main/html/five-in-a-row-triangle.html
+++ b/src/main/html/five-in-a-row-triangle.html
@@ -20,11 +20,15 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row-triangle.html
 	<script type='text/javascript'>
 'use strict';
 
-Promise.resolve(true)
-.then(() => evalscriptglobal('fun.js', 'fun()'))
-.then(() => evalscriptglobal('render.js', 'render'))
-.then(() => evalscript('five-in-a-row.js', 'fiveinarow'))
-.then(fiveinarow => {
+Promise.resolve({})
+.then(ns => evalscript('five-in-a-row.js', 'fiveinarow').then(fiveinarow => ({ ...ns, fiveinarow, })))
+.then(ns => evalscript('fun.js', 'fun()').then(fun => ({ ...ns, fun, })))
+.then(ns => evalscript('render.js', 'render').then(render => ({ ...ns, render, })))
+.then(ns => {
+	let { fiveinarow, fun, render, } = ns;
+	let { rand, range, } = fun;
+	let { rd, renderAgain, } = render;
+
     let view = rd.parse(`
         <span style='display: flex; flex-direction:column; font-size: 36px;'>
             <rd_map v='vm.board'>
