--- a/src/main/html/webassembly.html
+++ b/src/main/html/webassembly.html
@@ -20,8 +20,8 @@ file:///home/ywsing/suite/src/main/html/webassembly.html
 'use strict';
 
 Promise.resolve(true)
-.then(() => evalscriptglobal('fun.js', 'fun()'))
-.then(() => evalscriptglobal('render.js', 'render'))
+.then(() => evalscriptglobal('fun.js'))
+.then(() => evalscriptglobal('render.js'))
 .then(() => {
 	let rd_vm = rd.parse(`
 		<span>{ vm.result }</span>
