--- a/src/main/html/block-fill.html
+++ b/src/main/html/block-fill.html
@@ -73,7 +73,7 @@ Promise.resolve(true)
 					<tr>
 						<rd_for>
 							<td>
-								<rd_component v='views.viewCell' />
+								<rd_component v='env.viewCell' />
 							</td>
 						</rd_for>
 					</tr>
