--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -31,7 +31,7 @@ let size = sizep != null ? +sizep : 7;
 let nStoneTypes = colorsp != null ? +colorsp : 5;
 
 Promise.resolve({})
-.then(ns => evalscript('five-in-a-row.js', 'fiveinarow').then(fiveinarow => ({ ...ns, fiveinarow, })))
+.then(ns => evalscript('five-in-a-row.js').then(fiveinarow => ({ ...ns, fiveinarow, })))
 .then(ns => evalscript('fun.js').then(fun => ({ ...ns, fun, })))
 .then(ns => evalscript('render.js').then(render => ({ ...ns, render, })))
 .then(ns => {
@@ -102,7 +102,7 @@ Promise.resolve({})
 
 	let viewCells = rd.parse(`
 		<rd_for>
-			<rd_component v='views.viewCell' />
+			<rd_component v='env.viewCell' />
 		</rd_for>
 	`, { viewCell, });
 
@@ -111,7 +111,7 @@ Promise.resolve({})
 			<span style='align-items: center; display: flex; justify-content: space-between;'>
 				<span>
 					<rd_map v='vm.nextstones'>
-						<rd_component v='views.viewCells' />
+						<rd_component v='env.viewCells' />
 					</rd_map>
 				</span>
 				<span style='color: { palette[4] }; font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
@@ -130,7 +130,7 @@ Promise.resolve({})
 								vertical-align: middle;
 								width: { vm[0].x * 18 + vm[0].y * 36 }px;'>
 							</span>
-							<rd_component v='views.viewCells' />
+							<rd_component v='env.viewCells' />
 						</div>
 					</rd_map>
 				</rd_for>
