--- a/src/main/html/ball.html
+++ b/src/main/html/ball.html
@@ -8,15 +8,17 @@
 	</body>
 
 	<script src='eval-script.js'></script>
-	<script src='frp.js'></script>
 
 	<script type='text/javascript'>
 'use strict';
 
-Promise.resolve(true)
-.then(() => evalscriptglobal('fun.js'))
-.then(() => evalscriptglobal('render.js'))
-.then(() => {
+Promise.resolve({})
+.then(ns => evalscript('frp.js').then(frp => ({ ...ns, frp, })))
+.then(ns => evalscript('fun.js').then(fun => ({ ...ns, fun, })))
+.then(ns => {
+	let { frp, fun, } = ns;
+	let { rand, range, read, } = fun;
+
 	let width = window.innerWidth;
 	let height = window.innerHeight;
 
@@ -79,8 +81,8 @@ Promise.resolve(true)
 		return ball;
 	};
 
-	let ballx0 = Math.floor(width * Math.random());
-	let bally0 = Math.floor(height * Math.random());
+	let ballx0 = rand(0, width);
+	let bally0 = rand(0, height);
 	let objects = [background, ballf(ballx0, bally0)];
 
 	let clicks = frp.mouse.move
