--- a/src/main/html/radar.html
+++ b/src/main/html/radar.html
@@ -9,15 +9,17 @@
 	</body>
 
 	<script src='eval-script.js'></script>
-	<script src='frp.js'></script>
 
 	<script type='text/javascript'>
 'use strict';
 
-Promise.resolve(true)
-.then(() => evalscriptglobal('fun.js'))
-.then(() => evalscriptglobal('render.js'))
-.then(() => {
+Promise.resolve({})
+.then(ns => evalscript('frp.js').then(frp => ({ ...ns, frp, })))
+.then(ns => evalscript('fun.js').then(fun => ({ ...ns, fun, })))
+.then(ns => {
+	let { frp, fun, } = ns;
+	let { rand, range, read, } = fun;
+
 	let width = window.innerWidth;
 	let height = window.innerHeight;
 
